依赖收集，新增Dep与Watcher

--- a/src/Yue/index.html
+++ b/src/Yue/index.html
@@ -15,7 +15,14 @@
             msg:'hello'
         }
     })
-    console.log(vm.$data.msg);
-    vm.$data.msg = 'hello world';
+    // vm.$data.msg
+    // // vm.$data.test
+    // setTimeout(function(){
+    //     vm.$data.msg = 'hello Yue'
+    // },2000)
+    // console.log(vm.$data.msg);
+    // // vm.$data.msg = 'hello world';
+    // var test = new Watcher(vm,'msg');
+    // test.msg = 'hello world'
 </script>
 </html>
